# aqworker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/simple/: README.md  main.py  requirements.txt  run_beat.py  worker.py
examples/simple/aq_worker/: handlers.py  job_service.py  workers.py
examples/simple_fastapi/: README.md  client.py  handlers.py  job_service.py  main.py  requirements.txt  run_beat.py  trigger.py  worker.py  workers.py
src/aqworker/: __init__.py  constants.py  core.py  logger.py
src/aqworker/cli/: __init__.py  cli.py  commands.py  loader.py
src/aqworker/handler/: __init__.py  base.py  registry.py
src/aqworker/job/: __init__.py  base.py  models.py  queue.py  scheduler.py  service.py
src/aqworker/worker/: __init__.py  base.py  dispatcher.py  registry.py
tests/: conftest.py  test_cli_beat.py  test_cli_commands.py  test_cli_loader.py  test_constants.py  test_core_features.py  test_cronjob.py  test_discovery.py  test_job_queue.py  test_job_service.py  test_logger.py  test_registry.py  test_worker_base.py  test_worker_dispatcher.py
tests/examples/: __init__.py  beat_worker.py  worker_app.py
tests/examples/handlers/: __init__.py  email.py  sms.py
tests/examples/no_workers/: __init__.py
tests/examples/workers/: __init__.py  priority_worker.py  sample_worker.py
