[project]
name = "aqworker"
version = "0.1.2"
description = "Async Redis-backed job runner for Python apps. AQWorker orchestrates workers, handlers, and queues with auto-discovery, retries, CLI tooling, and FastAPI-friendly async processing while staying framework agnostic."
readme = "README.md"
requires-python = ">=3.10, <4.0"
authors = [
    { name = "Do Quoc Vuong", email = "vuongtlt13@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []
dependencies = [
    "pydantic>=2.12.4",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/vuongtlt13/aqworker"
Issues = "https://github.com/vuongtlt13/aqworker/issues"
License = "https://opensource.org/licenses/MIT"

[project.scripts]
aqworker = "aqworker.cli.cli:app"

[build-system]
requires = ["uv_build >= 0.9.9, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.12.0",
    "fakeredis>=2.32.1",
    "fastapi[standard]>=0.122.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-vv --strict-config --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["aqworker"]
omit = [
    "src/tests/*",
    "src/aqworker/__main__.py",
    "src/aqworker/cli/cli.py",
    "src/**/__init__.py",
    "src/examples/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
exclude = '^(?!src/aqworker/).*'

python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_calls = false
disable_error_code = ["no-untyped-def"]
strict = true
